--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
  .Photography-content {
   display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
         }
@@ -139,7 +139,7 @@
         }
 
         .Photography-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -177,7 +177,7 @@
         .Sport-content {
             display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 219px;
   z-index: 1;
         }
@@ -192,7 +192,7 @@
         }
 
         .Sport-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -229,7 +229,7 @@
         .Education-content {
             display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
         }
@@ -244,7 +244,7 @@
         }
 
         .Education-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -281,7 +281,7 @@
         .Daily-content {
             display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -297,7 +297,7 @@
         }
 
         .Daily-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -334,7 +334,7 @@
         .Photos-content {
             display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -350,7 +350,7 @@
         }
 
         .Photos-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -387,7 +387,7 @@
         .Community-content {
   display: none;
   position: absolute;
-  background: rgba(255, 138, 49, 0.984)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -403,7 +403,7 @@
         }
 
         .Community-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -440,7 +440,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: rgb(255, 136, 45)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
   margin-left: 45px;
@@ -456,7 +456,7 @@
         }
 
         .TikiYiki-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -493,7 +493,7 @@
         .Disability-content {
             display: none;
   position: absolute;
-  background: rgb(255, 136, 45)!important;
+  background: rgba(255, 149, 49, 0.984)!important;
   width: 260px;
   z-index: 1;
         }
@@ -508,7 +508,7 @@
         }
 
         .Disability-content a:hover {
-            background: rgba(255, 184, 77, 0.988)!important;
+            background: rgba(255, 195, 84, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -758,7 +758,7 @@
         .wrapper {
             display: flex;
             position: relative;
-            background: rgb(255, 47, 6);
+            background: rgb(255, 54, 9);
             width: 98%;
             height: 72px;
             flex-wrap: wrap;
@@ -3064,7 +3064,7 @@ function showSlides(n) {
 
         <div class="TikiYiki">
 
-            <button class="dropbtn">Tiki Yiki
+            <button class="dropbtn"><b>Tiki Yiki</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3079,13 +3079,13 @@ function showSlides(n) {
         </div>
 
         <div class="Disability">
-            <button class="dropbtn">Disability
+            <button class="dropbtn"><b>Disability</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
             <div class="Disability-content">
                 <a href="https://www.cspdm.ca/dm-in-context/impact-of-disability/defining-disability/"
-                    target="blank">CSPDM's Definition</a>
+                    target="blank">Disability Definition</a>
                 <a href="https://www.zolo.ca/blog/best-provinces-accessibility" target="blank">Disability and
                     Accessibility</a>
                 <a href="https://www.who.int/news-room/fact-sheets/detail/disability-and-health"
@@ -3097,7 +3097,7 @@ function showSlides(n) {
         </div>
 
         <div class="Community">
-            <button class="dropbtn">Play Geography
+            <button class="dropbtn"><b>Play Geography</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3114,7 +3114,7 @@ function showSlides(n) {
         </div>
 
         <div class="Education">
-            <button class="dropbtn">Let's Learn
+            <button class="dropbtn"><b>Let's Learn</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3130,7 +3130,7 @@ function showSlides(n) {
         </div>
 
         <div class="Photography">
-            <button class="dropbtn">Art And Culture
+            <button class="dropbtn"><b>Art And Culture</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3145,7 +3145,7 @@ function showSlides(n) {
         </div>
 
         <div class="Daily">
-            <button class="dropbtn">Videos
+            <button class="dropbtn"><b>Videos</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3156,7 +3156,7 @@ function showSlides(n) {
 
 
         <div class="Photos">
-            <button class="dropbtn">Photos
+            <button class="dropbtn"><b>Photos</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3167,7 +3167,7 @@ function showSlides(n) {
         
 
         <div class="Sport">
-            <button class="dropbtn">Sport
+            <button class="dropbtn"><b>Sport</b>
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3197,7 +3197,7 @@ function showSlides(n) {
 
         <div class="s-wrapper">
             <div class="reader">
-                <b>Welcome ! This Website Is In Project. Some Of The Pics And Links Are Temporarily Set. Thank You For Understanding !</b>
+                <b>Welcome ! This Website Is In Developping Project. Paths To Some Of Links Are Not Set Yet. Thank You For Understanding !</b>
             </div>
 
             
@@ -4207,6 +4207,8 @@ function showSlides(n) {
         Fights For Disabled Rights
         <br>
         DISABILITY IS NOT DESTINY
+        <br>
+        Webmaster: Gabriel Compaoré, Disability Rights Advocate
         <br>
     </div>
 </body>
