--- a/index.html
+++ b/index.html
@@ -4208,7 +4208,7 @@ function showSlides(n) {
         <br>
         DISABILITY IS NOT DESTINY
         <br>
-        Webmaster: Gabriel Compaoré, Disability Rights Advocate
+        Webmaster: GKC, Disability Rights Advocate
         <br>
     </div>
 </body>
