--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">    <style>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">   
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Acme&family=Arvo&family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Acme&family=Arvo&family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
+<style>
+        
+        
         * {
             box-sizing: border-box;
             margin-top: 0;
@@ -124,7 +133,7 @@
  .Photography-content {
   display: none;
   position: absolute;
-  background: rgba(255, 149, 49, 0.984)!important;
+  background: rgba(255, 164, 54, 0.988)!important;
   width: 260px;
   z-index: 1;
         }
@@ -177,7 +186,7 @@
         .Sport-content {
             display: none;
   position: absolute;
-  background: rgba(255, 149, 49, 0.984)!important;
+  background: rgba(255, 164, 54, 0.988)!important;
   width: 219px;
   z-index: 1;
         }
@@ -244,7 +253,7 @@
         }
 
         .Education-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
+            background: rgba(255, 164, 54, 0.988)!important;
             color: #000;
             font-family: 'georgia';
             padding: 8px 10px;
@@ -334,7 +343,7 @@
         .Photos-content {
             display: none;
   position: absolute;
-  background: rgba(255, 149, 49, 0.984)!important;
+  background: rgba(255, 164, 54, 0.988)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -387,7 +396,7 @@
         .Community-content {
   display: none;
   position: absolute;
-  background: rgba(255, 149, 49, 0.984)!important;
+  background: rgba(255, 164, 54, 0.988)!important;
   width: 260px;
   z-index: 1;
   box-shadow: -0.1px 2px 0.55rem -0.1px #8686867a;
@@ -440,7 +449,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: rgba(255, 149, 49, 0.984)!important;
+  background: rgba(255, 164, 54, 0.988)!important;
   width: 260px;
   z-index: 1;
   margin-left: 45px;
@@ -493,7 +502,7 @@
         .Disability-content {
             display: none;
   position: absolute;
-  background: rgba(255, 149, 49, 0.984)!important;
+  background: rgba(255, 164, 54, 0.988)!important;
   width: 260px;
   z-index: 1;
         }
@@ -2895,8 +2904,8 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            background-color: #faf9f9f9;
-            color: rgba(133, 133, 133, 0.961);
+            background-color: #fffffff9;
+            color: rgba(173, 173, 173, 0.961);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -2905,18 +2914,21 @@ background: #717171;
             width: 84%;
             padding: 5px;
             height: 45px;
-            font-family: 'Barlow Condensed', sans-serif;
-            font-size: 25px;
+            font-family: 'Acme';
+            font-size: 20px;
             word-spacing: 1.8px;
-            border: 0.2px solid #a6a6a67c;
-            box-shadow: 0px 0px 2px 1px rgba(212, 212, 212, 0.565);
+            border: 0.1px solid #9f9f9f7c;
+            box-shadow: 0px 0px 2px 1px rgba(152, 152, 152, 0.565);
             margin-top: -5px;
             border-radius: 0.2rem;
         }
         .reader:hover{
             background: #fff;
-            border: 0.2px solid #a6a6a67c;
+            border: 0.1px solid rgba(97, 97, 97, 0.486);
+            border-bottom: none;
             color: #131313ef;
+            box-shadow: 0px 5px 0.5rem 1px rgba(118, 118, 118, 0.565);
+            transition: 0.45s ease;
         }
     </style>
 
