--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">   
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Acme&family=Arvo&family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Acme&family=Arvo&family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet">
-<style>
+<link href="https://fonts.googleapis.com/css2?family=Acme&family=Arvo&family=Bangers&family=Barlow+Condensed:wght@300&family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono:wght@200&family=Kanit:wght@300&family=Merienda:wght@300&family=Oswald:wght@300&family=Prompt:wght@200&family=Roboto+Slab&family=Tektur&family=Titillium+Web&display=swap" rel="stylesheet"><style>
         
         
         * {
@@ -2888,7 +2886,7 @@ background: #717171;
             height: 30px;
             font-family: 'arial';
             font-family: 'Barlow Condensed', sans-serif;
-            font-size: 17px;
+            font-size: 16px;
             padding-top: 20px;
             padding-bottom: 5px;
             margin-top: 10px;
@@ -2905,7 +2903,7 @@ background: #717171;
             position: relative;
             top: 25px;
             background-color: #fffffff9;
-            color: rgba(173, 173, 173, 0.961);
+            color: rgba(159, 159, 159, 0.961);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -2914,8 +2912,8 @@ background: #717171;
             width: 84%;
             padding: 5px;
             height: 45px;
-            font-family: 'Acme';
-            font-size: 20px;
+            font-family: 'Merienda';
+            font-size: 17.15px;
             word-spacing: 1.8px;
             border: 0.1px solid #9f9f9f7c;
             box-shadow: 0px 0px 2px 1px rgba(152, 152, 152, 0.565);
