--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: #000;
+            background: #353535f7;
             height: 57px;
             object-fit: cover;
             z-index: 1;
@@ -3207,7 +3207,7 @@ function showSlides(n) {
 
         <div class="s-wrapper">
             <div class="reader">
-                <b>Welcome ! This Website Is In Developping Project. Paths To Some Of Links Are Not Set Yet. Thank You For Understanding !</b>
+                <b>Welcome ! This Website is in Developping Project. Paths To Some Of Links Are Not Set Yet. Thank You For Understanding !</b>
             </div>
 
             
@@ -3372,7 +3372,7 @@ function showSlides(n) {
                     <div class="k-imagek4">
                         <p
                             style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
-                            <b>What Means Food Security According To You ? What be Done To Challenge It Worldwide?</b> </p>
+                            <b>What Means Food Security? What Should Be Done To Challenge It Worldwide?</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
