--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,8 @@
         }
 
         .content1 a:hover {
-            color: rgba(255, 8, 8, 0.993);
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .k-image1 {
@@ -1451,7 +1452,8 @@
         }
 
         .content2 a:hover {
-            color: rgba(0, 0, 201, 0.995);
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .k-image3 {
@@ -1514,7 +1516,8 @@
         }
 
         .content3 a:hover {
-            color: rgb(220, 24, 220);
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .k-imagek3 {
@@ -1575,7 +1578,8 @@
         }
 
         .content4 a:hover {
-            color: orangered;
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .k-imagek4 {
@@ -1636,7 +1640,8 @@
         }
 
         .content5 a:hover {
-            color: green;
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .k-imagek5 {
@@ -1697,7 +1702,8 @@
         }
 
         .content6 a:hover {
-            color: rgb(205, 30, 30);
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .k-imagek6 {
@@ -1758,7 +1764,8 @@
         }
 
         .content7 a:hover {
-            color: rgba(9, 182, 239, 0.982);
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .k-imagek7 {
@@ -1815,7 +1822,8 @@
         }
 
         .contentx a:hover {
-            color: rgba(255, 8, 8, 0.993);
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
         }
 
         .contentx0{
@@ -1906,6 +1914,10 @@
             padding-top: 20px;
             border-bottom: 0.2px solid #9d9d9d7c;
         }
+
+        .content8:hover{
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;}
 
         .envelop {
             display: grid;
@@ -3285,7 +3297,7 @@ function showSlides(n) {
                             </b>
                             </p>
 
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
                             people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
                             are steadily working to get it done including to be trully inclusive.
                             <br>
@@ -3313,7 +3325,7 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/education.html" target="_blank">
                     <div class="k-image2">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; padding: 5px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
                             <b> "Inclusiveness" May Be Ordinary Or New To You. But Inclusiveness As Word Never Been
                                 Strange To The Dictionary.
                                 That Means Words Have Been With Us Since The Creation. It Belongs To Human-Beings To Put Them
