--- a/index.html
+++ b/index.html
@@ -2150,10 +2150,10 @@
             justify-items: center;
             background-color: #fdfdfdd1;
             width: 84%;
-            height: 580px;
+            height: 600px;
             font-family: 'georgia';
             color: rgb(82, 82, 82);
-            font-size: 22px;
+            font-size: 20px;
             line-height: 30px;
             text-align: left;
             word-spacing: 1.7px;
@@ -2183,6 +2183,12 @@
         .content9e img {
             width: 270px;
             height: 168px;
+        }
+
+        .content9:hover {
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.25s linear;
+            padding: 5px;
         }
 
         .contenty {
@@ -2276,14 +2282,21 @@
         }
 
         .content2y2 {
-            width: 249px;
-            height: 148px;
+            width: 265px;
+            height: 180px;
             padding-left: 1px;
-            font-size: 11px;
-            line-height: 13.4px;
+            font-size: 10px;
+            line-height: 10px;
             background-color: transparent;
+            text-align: left;
         }
 
+        .content2y2:hover {
+            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            transition: 0.15s linear;
+            padding: 5px;
+            line-height: 10px;
+        }
         .contenty3 {
             display: grid;
             grid-auto-columns: column;
@@ -3333,7 +3346,7 @@ function showSlides(n) {
                                 Education Matters Because It's Not A
                                 Privilege But A Right For (Disabled Ones) Kids With Difference.</b> </p>
 
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;"><b>Inclusive Education</b> has no
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Inclusive Education</b> has no
                             room everywhere. It should not be like a privilege but an intrinseque right.</p>
                     </div>
                 </a>
@@ -3356,9 +3369,9 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;padding: 5px;">
                             <b>Health Care Is A Common Human Right Worldwide. But In Some Regions People Simply Die Of Malaria.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;"><b>Health Care</b> as a right for
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Health Care</b> as a right for
                             everyone is not the reality everywhere. Especially in some African countries people suffer
                             and die of simple diseases that can be avoided.</p>
                     </div>
@@ -3383,9 +3396,9 @@ function showSlides(n) {
                 <a href="#" target="_blank">
                     <div class="k-imagek4">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>What Means Food Security? What Should Be Done To Challenge It Worldwide?</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">While in some regions
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
                             hard to get needs met. In some worse cases, some died. But No Food Security, No Sustainable Development.
@@ -3411,11 +3424,11 @@ function showSlides(n) {
                 <a href="https://www.un.org/en/global-issues/climate-change" target="_blank">
                     <div class="k-imagek5">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>Climate Change Is a Big Threat To Earth. It's Increasingly Causing Deadly Floodings, Wildfires and Droughts
                                 Around The World. There Is No Doubt That Climate Change Has More Endangered Earth Than Never Before. But
                                 Human-Being Has Provoked That Change Through His Continuing Agression. Now He Has to Figure It Out And Mitigate The Danger.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">
                             <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
                         </p>
                     </div>
@@ -3440,11 +3453,11 @@ function showSlides(n) {
                 <a href="#" target="_blank">
                     <div class="k-imagek6">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
                                 Have To Struggle Two Times Harder At Least Than Any Else To Get Their Needs Or Achieve.
                                 They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">As a disabled person, I experienced
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing discriminations. It's too tough and challenging but It's Teaching . I
                             have to find out a way to get my rights respected
                             as human-being.</p>
@@ -3469,12 +3482,12 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/saxiwam.html" target="_blank">
                     <div class="k-imagek7">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>Culture Is Like A Backbone For Communities To Survive In The Biggest Family Of Diversity. It's A Way To
                                 Promote And Preserve Identity From Elders To Kids,
                                 From Grand-Parents To Grand-Sons. Everybody Plays A Key Role Of A Transmission In Order To
                                 Preserve It</b> </p>
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px;">Promoting Saxiwama as a cultural
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">Promoting Saxiwama as a cultural
                             practice is a best way to preserve and transmit it.</p>
                     </div>
                 </a>
