--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,8 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            width: auto;
+            text-align: center;
+            width: 334px;
             height: 245px;
             padding: 5px;
         }
@@ -1416,15 +1417,15 @@
             display: grid;
             grid-template-columns: 1fr;
             width: 560px;
+            text-align: center;
             column-gap: 5px;
-            justify-content: right;
+            justify-content: center;
             justify-items: center;
             background: transparent;
             height: 260px;
             font-family: arial;
             font-size: 18px;
             line-height: 23px;
-            text-align: left;
             padding-right: 5px;
             border-right: 0.6px solid rgba(167, 167, 167, 0.808);
         }
@@ -1466,6 +1467,8 @@
             font-family: georgia;
             width: auto;
             height: 245px;
+            width: 334px;
+            text-align: center;
             padding: 5px;
         }
 
@@ -1528,11 +1531,11 @@
             justify-content: right;
             justify-items: center;
             background: transparent;
+            text-align: left;
             height: 260px;
             font-family: arial;
             font-size: 18px;
             line-height: 23px;
-            text-align: left;
             padding-right: 5px;
             border-right: 0.6px solid rgba(167, 167, 167, 0.808);
         }
@@ -1545,7 +1548,8 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            width: auto;
+            width: 334px;
+            text-align: center;
             height: 245px;
             padding: 5px;
         }
@@ -1594,7 +1598,7 @@
             font-family: arial;
             font-size: 18px;
             line-height: 23px;
-            text-align: left;
+            text-align: center;
             padding-right: 5px;
             border-right: 0.6px solid rgba(167, 167, 167, 0.808);
         }
@@ -1607,7 +1611,8 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            width: auto;
+            text-align: center;
+            width: 334px;
             height: 245px;
             padding: 5px;
         }
@@ -1669,7 +1674,8 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            width: auto;
+            width: 334px;
+            text-align: center;
             height: 245px;
             padding: 5px;
         }
@@ -1731,7 +1737,8 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            width: auto;
+            text-align: center;
+            width: 334px;
             height: 245px;
             padding: 5px;
         }
@@ -1793,7 +1800,8 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            width: auto;
+            text-align: center;
+            width: 334px;
             height: 245px;
             padding: 5px;
         }
@@ -3325,7 +3333,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/20/8ul2.jpg" alt="Sunset in Burkina Faso" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(126, 126, 126)">
                                 Sunset In The Village Of Nagreongo [Burkina Faso]</figcation>
                         </figure>
                     </div>
@@ -3356,7 +3364,7 @@ function showSlides(n) {
                         <figure>
                             <img src="https://zupimages.net/up/22/21/3bad.jpg" alt="Teaching kids" />
                             <figcation
-                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
+                                style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: center; color: rgb(126, 126, 126)">
                                 Supporting Preschool Kids in
                                 Burkina Faso</figcation>
                         </figure>
