--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: #4d4d4dfb;
+            background: #262626fb;
             height: 57px;
             object-fit: cover;
             z-index: 1;
@@ -1401,7 +1401,7 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            text-align: center;
+            text-align: left;
             width: 334px;
             height: 245px;
             padding: 5px;
@@ -1468,7 +1468,7 @@
             width: auto;
             height: 245px;
             width: 334px;
-            text-align: center;
+            text-align: left;
             padding: 5px;
         }
 
@@ -1528,7 +1528,7 @@
             grid-template-columns: 1fr;
             width: 560px;
             column-gap: 5px;
-            justify-content: right;
+            justify-content: center;
             justify-items: center;
             background: transparent;
             text-align: left;
@@ -1591,14 +1591,14 @@
             grid-template-columns: 1fr;
             width: 560px;
             column-gap: 5px;
-            justify-content: right;
+            justify-content: center;
             justify-items: center;
             background: transparent;
             height: 260px;
             font-family: arial;
             font-size: 18px;
             line-height: 23px;
-            text-align: center;
+            text-align: left;
             padding-right: 5px;
             border-right: 0.6px solid rgba(167, 167, 167, 0.808);
         }
@@ -3318,7 +3318,7 @@ function showSlides(n) {
                             </b>
                             </p>
 
-                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
+                        <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px; text-align: left;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
                             people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
                             are steadily working to get it done including to be trully inclusive.
                             <br>
@@ -3377,7 +3377,7 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;padding: 5px;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;padding: 5px; text-align: left;">
                             <b>Health Care Is A Common Human Right Worldwide. But In Some Regions People Simply Die Of Malaria.</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;"><b>Health Care</b> as a right for
                             everyone is not the reality everywhere. Especially in some African countries people suffer
@@ -3403,8 +3403,7 @@ function showSlides(n) {
 
                 <a href="#" target="_blank">
                     <div class="k-imagek4">
-                        <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
                             <b>What Means Food Security? What Should Be Done To Challenge It Worldwide?</b> </p>
                         <p style="color: rgba(98, 98, 98, 0.768); font-size: 16px; padding: 5px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
