--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,7 @@
             justify-items: center;
             background: transparent;
             font-family: georgia;
-            text-align: left;
+            text-align: center;
             width: 334px;
             height: 245px;
             padding: 5px;
@@ -1468,7 +1468,7 @@
             width: auto;
             height: 245px;
             width: 334px;
-            text-align: left;
+            text-align: center;
             padding: 5px;
         }
 
@@ -1484,7 +1484,7 @@
             grid-template-columns: 1fr;
             width: 560px;
             column-gap: 5px;
-            justify-content: right;
+            justify-content: space-around;
             justify-items: center;
             background: transparent;
             height: 260px;
@@ -1510,7 +1510,7 @@
             font-size: 22px;
             line-height: 15px;
             word-spacing: 1.7px;
-            text-align: left;
+            text-align: center;
             padding-left: 5px;
             padding-bottom: 5px;
             padding-right: 5px;
@@ -1531,7 +1531,7 @@
             justify-content: center;
             justify-items: center;
             background: transparent;
-            text-align: left;
+            text-align: center;
             height: 260px;
             font-family: arial;
             font-size: 18px;
