--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
         .navbar:hover .TikiYiki:hover .dropbtn {
             background: #fff!important;
-            color: #000;
+            color: #303030;
             transition: 0.15s linear;
             cursor: pointer;
         }
@@ -447,7 +447,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: rgba(255, 164, 54, 0.988)!important;
+  background: rgb(60, 26, 170)!important;
   width: 260px;
   z-index: 1;
   margin-left: 45px;
@@ -455,7 +455,7 @@
 
         .TikiYiki-content a {
             float: none;
-            color: darkblue;
+            color: rgb(233, 233, 2);
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -463,8 +463,8 @@
         }
 
         .TikiYiki-content a:hover {
-            background: rgba(255, 195, 84, 0.988)!important;
-            color: #000;
+            background: #fff;
+            color: rgb(255, 38, 0);
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 20px;
